# loopat

./: .dockerignore  .gitignore  1001-mvp.md  Dockerfile  PROTOTYPE-STATUS.md  README.md  docker-compose.yml  loopat.release  package.json  playwright.config.ts  start.sh  template_info.md  todo.md  启动必看 - 不看部署必挂.md
.aoneci/: deploy-daily.yaml  deploy-pre.yaml  sync-upstream.yaml
.github/workflows/: sandbox-image.yml
APP-META/: 使用指南-不看部署必挂
behavior/: 03-context-flow.md  README.md
conf/: config.json
deploy/: start-pod.sh
docs/: account-model.md  api-v1.md  architecture.html  architecture.md  claude-config.md  composition.md  context-flow.md  debug.md  identity.md  install.md  notes-realtime.md  overview.html  sandbox.md  setup-admin.md  setup-user.md  troubleshoot.md
dogfood/: README.md  helpers-shared.ts  journeys.config.ts  playwright.config.ts  setup.ts
dogfood/attach-detach/: journey.spec.ts
dogfood/concurrent-push/: README.md  journey.spec.ts
dogfood/context-isolation/: README.md  journey.spec.ts
dogfood/context-latest/: README.md  journey.spec.ts
dogfood/first-5-minutes/: README.md  (+1 more)
e2e/: globalSetup.ts  globalTeardown.ts  loop.spec.ts
loading/: index.html
loopat-sandbox/: Cargo.toml
loopat-sandbox/src/: main.rs
phase1-prototype/: package.json
public/: index.html  index.zh.html
scripts/: EXPERIENCE.md  README.md  build-binary.sh  build-macos.sh  build-web-assets.mjs  build-wsl-distro.sh  codesign-runner.sh  install-macos-app.sh  install-macos.sh  loopat.ts  migrate-dashscope.sh  podman-start.sh  podman-stop.sh  sync-upstream.sh
server/: package.json
src/: main.sh
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/loading/: index.html
src-tauri/src/: commands.rs  lib.rs  main.rs  vm.rs
src-tauri/vm-bridge/: bridge.m
src-tauri/vm-bridge/include/: bridge.h
web/: package.json  vite.config.ts
(+235 files in other folders)
