[package]
name = "loopat"
version = "0.1.0"
edition = "2021"

[lib]
name = "loopat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Linux sandbox
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["sched", "mount", "fs"] }
libc = "0.2"

# macOS sandbox (stubs for now)
[target.'cfg(target_os = "macos")'.dependencies]
# vz crate will go here later

# Windows sandbox (stubs for now)  
[target.'cfg(target_os = "windows")'.dependencies]
# windows crate will go here later
