[package]
name = "loopat"
version = "0.1.0"
description = "loopat – self-hosted AI workspace"
authors = []
license = "Apache-2.0"
repository = "https://github.com/simpx/loopat"
edition = "2021"

[lib]
name = "loopat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "fs", "sync", "io-util", "macros", "time"] }
url = "2"
dirs = "5"
log = "0.4"
env_logger = "0.11"
